# komodo_coffee_taker

./: CMakeLists.txt~  README.md  package.xml
config/gazebo/: base_local_planner_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml~  local_costmap_params.yaml~
launch/: komodo_coffee_taker.launch  komodo_with_elev_gazebo_moveit.launch  komodo_with_elev_gazebo_moveit_empty_world.launch  move_base_gazebo.launch  move_base_gazebo.launch~  run_komodo_gazebo.launch  run_moveit_test.launch
src/: komodo_coffee_taker.cpp  moveit_test.cpp
srv/: CoffeeTaker.srv
worlds/: table_with_beer.world  table_with_coke_can.world
worlds/gazebo_model/goldstar_beer/: model-1.4.sdf  model-1_4.sdf  model.sdf
